# ResearchReader

./: Dockerfile  README.md  compose.yml  pyproject.toml
app/: research_reader.py
